# dicomaster

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE-ENTERPRISE.txt  LICENSE-OPEN.txt  LICENSE.md  LICENSE.txt  PRICING.md  README.md  RELEASE.md  dicom_tool.py  dicomaster.py  dicomaster.pyi  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  release.yml
sample_data/: mri_1.dcm  mri_2.dcm  mri_3.dcm  mri_4.dcm
tests/: generate_fixture.py  test_banner.py  test_basic.py  test_integration_outputs.py  test_metadata_roundtrip.py
tests/fixtures/: test.dcm
