[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicomaster"
version = "0.9.0"
description = "Secure DICOM Anonymizer & Batch Processor"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Santo Paul", email = "santopaul2005@gmail.com" }
]
maintainers = [
    { name = "Santo Paul", email = "santopaul2005@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["dicom", "anonymize", "medical-imaging", "pydicom", "healthcare", "radiology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "pydicom>=2.3.0",
    "colorama>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/santopaul/dicomaster"
Repository = "https://github.com/santopaul/dicomaster.git"
Documentation = "https://github.com/santopaul/dicomaster/blob/main/README.md"
"Bug Tracker" = "https://github.com/santopaul/dicomaster/issues"


[tool.setuptools]
py-modules = ["dicomaster"]

[project.scripts]
dicomaster = "dicomaster:main"

[project.optional-dependencies]
full = [
    "cryptography>=41.0.0",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.2",
    "numpy>=1.24.0",
    "pyfiglet>=0.8.post1",
    "termcolor>=2.3.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0"
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=dicomaster"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.ruff]
select = ["E", "F", "W", "I", "N", "B", "SIM", "UP"]
ignore = []
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]
